[tool.poetry]
name = "self-hosted-runner-example"
version = "0.1.0"
description = ""
authors = ["Ivan Sharun <ivan@sha.run>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
